[package]
name = "advent_23"
version = "0.1.0"
edition = "2021"
default-run = "advent_23"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1"
itertools = "0.12.0"
